<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DIYapp</string>
    <string name="action_settings">Settings</string>
    
    <string name="default_menu_ico_text">opcja</string>

        <string name="item_wifi">Wi-fi</string>
        <string name="item_time">Dzień i gdzina</string>
        <string name="item_bluetooth">Bluetooth</string>
        <string name="item_gps">GPS</string>
        <string name="item_phone">Telefon</string>
        <string name="item_date">Data</string>
        <string name="item_sound">Glośność dzwonka</string>
        <string name="item_notification">Notyfikacja</string>
        
        <string name="addDiya">Dodaj DIYe</string>
        <string name="addConditionsList">Dodaj listę warunków</string>
        <string name="action_text">Akcje</string>
        <string name="condition_text">Warunki</string>
        <string name="orText">Lub&#8230;</string>
        <string name="textSince">od&#8230;</string>
        <string name="textTo">&#8230;do</string>
        <string name="text_if">jeśli&#8230;</string>
        <string name="onDays">W następujące dni tygodnia:</string>
        <string name="conectetToWifiNamed">Podłączone do konkretnej sieci(opcjonalnie):</string>
        <string name="tickerTextNotification">Powiadomienie w górnym pask:</string>
        <string name="notificationTitleNotification">Tytuł:</string>
        <string name="notificationTextNotification">Treść powiadomienia:</string>
        <string name="soundLevel">Ustaw głośność dzwonka:</string>
        
		<string name="item_add_diya">DIYa</string>
		<string name="addDiyaName">Podaj nazwę:</string>
		<string name="addDiyaDesc">Podaj opis:</string>
		
		<string name="CheckBoxDay1">Pn</string>
		<string name="CheckBoxDay2">Wt</string>
		<string name="CheckBoxDay3">Śr</string>
		<string name="CheckBoxDay4">Cw</string>
		<string name="CheckBoxDay5">Pt</string>
		<string name="CheckBoxDay6">Sb</string>
		<string name="CheckBoxDay7">Nd</string>
		
		
		<string name="ok">Zapisz</string>
		<string name="anuluj">Anuluj</string>
		
		
        <string name="quickaction_edit">Edytuj</string>
        <string name="quickaction_remove">Usuń</string>
        <string name="quickaction_run">Start</string>
        <string name="quickaction_stop">Stop</string>
        <string name="default_diya_name">Nowa DiYa nr </string>
</resources>
