<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black40p">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@color/white"
	    android:layout_margin="20dp">
		<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="60dp"
			    android:orientation="vertical">
			    <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="50dp"
				    android:orientation="vertical"
				    android:background="@color/orange">
			    	<RelativeLayout
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:orientation="vertical"
					    android:layout_margin="2dp"
					    android:background="@drawable/orange_highlight">
			    		
			    	    <TextView
					        android:id="@+id/condition_header_time"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/item_time" 
					        android:textColor="@color/white"
					        android:layout_centerVertical="true"
					        android:layout_marginLeft="15dp"
					        android:textSize="17dp"/>
								    
					</RelativeLayout>
			    
				</LinearLayout>
			    <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="10dp"
				    android:orientation="vertical">
			    	<ImageView
	                        android:id="@+id/arrowCondition"
	                        android:layout_width="wrap_content"
	                        android:layout_height="match_parent"
	                        android:src="@drawable/arrow_down_orange"
	                        android:layout_marginLeft="15dp" />
		         </LinearLayout> 
			    
		</LinearLayout>
		<RelativeLayout 
		    
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
		    >
		<ScrollView 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_marginBottom="50dp"
			    android:layout_alignParentTop="true">
		<RelativeLayout 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
		    >
		<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_marginBottom="50dp"
			    android:orientation="vertical"
				    android:layout_alignParentTop="true"
			    >
		<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:layout_marginTop="2dp"
			    
			    
			    >
			<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="vertical"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    
				    >
	
				<TextView
				    android:id="@+id/textSince"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/textSince"
				    android:layout_marginTop="20dp"
				    android:layout_marginLeft="20dp"
				    android:textColor="@color/black"
				    android:textSize="13dp" />
		     
		     <TimePicker
		        android:id="@+id/timeSince"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		       	android:layout_marginTop="0dp"
		       	android:layout_marginBottom="0dp"
		        
		        />
		     </LinearLayout>
			<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="vertical"
				    android:layout_weight="1"
				    android:layout_margin="2dp"
				    android:background="@drawable/vertical_grey_line"
				    
				    >
		     <TextView
		         android:id="@+id/textTo"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="20dp"
				    android:layout_marginLeft="20dp"
				    android:text="@string/textTo"
				    android:textColor="@color/black"
				    android:textSize="13dp" />
			 <TimePicker
		        android:id="@+id/timeTo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		       	android:layout_marginTop="0dp"
		       	android:layout_marginBottom="0dp"
		        
		        />
			 </LinearLayout>
		</LinearLayout>
		<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical"
			    android:layout_marginTop="1dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:layout_marginBottom="2dp"
			    
		>
		    <TextView
	         android:id="@+id/onDays"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="20dp"
			    android:layout_marginLeft="20dp"
			    android:layout_marginRight="20dp"
			    android:text="@string/onDays"
			    android:textColor="@color/black"
			    android:textSize="13dp" />
				
				<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="vertical"
				    android:layout_marginTop="20dp"
				    android:layout_marginLeft="20dp"
				    android:layout_marginRight="20dp"
					>
					<LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:layout_gravity="center_horizontal"
					>
				    <CheckBox
				        android:id="@+id/day1"
				        android:layout_height="40dp"
				        android:layout_width="wrap_content"
				        style="@style/checkbox"
				        android:text="@string/CheckBoxDay1" />
				     <CheckBox
				        android:id="@+id/day2"
				        android:layout_height="40dp"
				        android:layout_width="wrap_content"
				        style="@style/checkbox"
				        android:text="@string/CheckBoxDay2" />
				      <CheckBox
				        android:id="@+id/day3"
				        android:layout_height="40dp"
				        android:layout_width="wrap_content"
				        style="@style/checkbox"
				        android:text="@string/CheckBoxDay3" />
				       <CheckBox
				        android:id="@+id/day4"
				        android:layout_height="40dp"
				        android:layout_width="wrap_content"
				        style="@style/checkbox"
				        android:text="@string/CheckBoxDay4" />
				       </LinearLayout>
				       <LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:layout_gravity="center_horizontal"
					>
				        <CheckBox
				        android:id="@+id/day5"
				        android:layout_height="40dp"
				        android:layout_width="wrap_content"
				        style="@style/checkbox"
				        android:text="@string/CheckBoxDay5" />
				         <CheckBox
				        android:id="@+id/day6"
				        android:layout_height="40dp"
				        android:layout_width="wrap_content"
				        style="@style/checkbox"
				        android:text="@string/CheckBoxDay6" />
				          <CheckBox
				        android:id="@+id/day7"
				        android:layout_height="40dp"
				        android:layout_width="wrap_content"
				        style="@style/checkbox"
				        android:text="@string/CheckBoxDay7" />
					</LinearLayout>
				</LinearLayout>
				
			</LinearLayout>
			  
			</LinearLayout>
			

			

			</RelativeLayout>
			</ScrollView>
			<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="50dp"
				    android:orientation="horizontal"
				    android:layout_alignParentBottom="true"
				    android:layout_marginBottom="2dp">
					<Button
					    android:id="@+id/buttonAnulujTime"
					    android:layout_width="wrap_content"
					    android:layout_height="50dp"
					    android:layout_weight="1"
					    android:text="@string/anuluj"
					    android:background="@color/orange"
					    android:textColor="@color/white"
					    android:layout_margin="2dp" />
					<Button
					    android:id="@+id/buttonOkTime"
					    android:layout_width="wrap_content"
					    android:layout_height="50dp"
					    android:layout_weight="1"
					    android:text="@string/ok"
					    android:background="@color/orange"
					    android:textColor="@color/white"
					    android:layout_margin="2dp"/>
			</LinearLayout>
			</RelativeLayout>
	</LinearLayout>
	
</LinearLayout>
