<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black40p">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@color/white"
	    android:layout_margin="20dp">
		<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="60dp"
			    android:orientation="vertical">
			    <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="50dp"
				    android:orientation="vertical"
				    android:background="@color/orange">
			    	<RelativeLayout
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:orientation="vertical"
					    android:layout_margin="2dp"
					    android:background="@drawable/orange_highlight">
			    		
			    	    <TextView
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/item_wifi" 
					        android:textColor="@color/white"
					        android:layout_centerVertical="true"
					        android:layout_marginLeft="15dp"
					        android:textSize="17dp"/>
								    
					</RelativeLayout>
			    
				</LinearLayout>
			    <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="10dp"
				    android:orientation="vertical">
			    	<ImageView
	                        android:id="@+id/arrowCondition"
	                        android:layout_width="wrap_content"
	                        android:layout_height="match_parent"
	                        android:src="@drawable/arrow_down_orange"
	                        android:layout_marginLeft="15dp" />
		         </LinearLayout> 
			    
		</LinearLayout>
		<RelativeLayout 
		    
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
		    >
		<ScrollView 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_marginBottom="50dp"
			    android:layout_alignParentTop="true">
		<RelativeLayout 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
		    >
			<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:layout_marginBottom="50dp"
				    android:layout_marginLeft="20dp"
				    android:layout_marginRight="20dp"
				    android:orientation="vertical"
					    android:layout_alignParentTop="true"
				    >
				  	<TextView
				  	    android:id="@+id/text_if"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/text_if"
					    android:layout_marginTop="20dp"
					    android:textColor="@color/black"
					    android:textSize="13dp" />
					<Switch
					    android:id="@+id/switchWiFi"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_marginTop="20dp"
		       			android:layout_gravity="center"
					    android:text="@string/item_wifi" />
					<LinearLayout
					    android:id="@+id/ifWiFiOn"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:orientation="vertical"
					    android:layout_marginTop="40dp"
					    android:descendantFocusability="beforeDescendants"
						android:focusableInTouchMode="true"
						android:visibility="gone"
				    >
					    <TextView
				  	   		 android:id="@+id/conectetToWifiNamed"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:text="@string/conectetToWifiNamed"
						    android:layout_marginTop="20dp"
						    android:textColor="@color/black"
		       			android:layout_gravity="center"
						    android:textSize="13dp" />
					    <EditText
					    android:id="@+id/wifiName"
						    android:layout_marginTop="20dp"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
		       			android:layout_gravity="center"
					    android:ems="10">
					    
					    </EditText>

					</LinearLayout>
			  	
			</LinearLayout>
			

			

			</RelativeLayout>
			</ScrollView>
			<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="50dp"
				    android:orientation="horizontal"
				    android:layout_alignParentBottom="true"
				    android:layout_marginBottom="2dp">
					<Button
					    android:id="@+id/buttonAnulujWifi"
					    android:layout_width="wrap_content"
					    android:layout_height="50dp"
					    android:layout_weight="1"
					    android:text="@string/anuluj"
					    android:background="@color/orange"
					    android:textColor="@color/white"
					    android:layout_margin="2dp" />

					

					<Button
					    android:id="@+id/buttonOkWifi"
					    android:layout_width="wrap_content"
					    android:layout_height="50dp"
					    android:layout_weight="1"
					    android:text="@string/ok"
					    android:background="@color/orange"
					    android:textColor="@color/white"
					    android:layout_margin="2dp"/>
			</LinearLayout>
			</RelativeLayout>
	</LinearLayout>
	
</LinearLayout>
